no idea what I'm doing

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "clean": "rimraf dist",
     "dev:11ty": "eleventy --serve --watch",
     "build:11ty": "eleventy",
-    "start": "run-p dev:*",
-    "build": "run-s clean build:*"
+    "build": "npx @11ty/eleventy"
   },
   "keywords": [],
   "repository": {
